fixed the spacing between items in the footer, added more space between css documentation and practice exercises

--- a/flexbox_styles.css
+++ b/flexbox_styles.css
@@ -64,7 +64,7 @@ header {
   flex-direction: column;
   flex-wrap: wrap;
   flex: 1;
-  gap: 5px;
+  gap: 10px;
   padding-bottom: 30px;
 }
 
